more auto-tune gauges

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -493,7 +493,8 @@ page = 1
 
    pageButtons  = "&EGO"
    gauge1       = tachometer	
-   gauge2       = AFRactual
+   gauge2       = afr1Gauge
+   gauge3		= mapGaugeValue
 
 
 [VeAnalyze]
@@ -531,7 +532,7 @@ fileVersion = { 20150211 }
       tpsADC          = scalar,  U16,     32,             "ADC",            1,       0.0;
       alignmet        = scalar,  U16,     34,              "al",            1,       0.0;
       atmPres         = scalar,  F32,     36,             "pres",           1,       0.0;
-      MAP             = scalar,  F32,     40,              "MAP",           1,       0.0;
+      MAPValue        = scalar,  F32,     40,              "MAP",           1,       0.0;
 	  ; total fuel squirt duration (in MS) per engine cycle according to current CLT
 	  crankingFuel    = scalar,  F32,     44,              "ms",            1,       0.0;
       baseFuel        = scalar,  F32,     48,              "ms",           1,         0
@@ -614,7 +615,7 @@ fileVersion = { 20150211 }
       yAxis       = -30,  1300, 10
       xBins       = mafDecodingBins, MAF
       yBins       = mafDecoding
-      gauge       = mafGauge
+      gauge       = mafGaugeVolts
 
    curve = iatFuelCorrCurve, "Intake air temp fuel correction"
       columnLabel = "Coolant", "Correction"
@@ -670,7 +671,7 @@ fileVersion = { 20150211 }
    table = veTableTbl,  veTableMap,  "VE Table",   1
       ;       constant, variable
       xBins       = veRpmBins,  rpm
-      yBins       = veLoadBins,  MAP
+      yBins       = veLoadBins,  MAPValue
       zBins       = veTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
@@ -697,7 +698,7 @@ fileVersion = { 20150211 }
    table = afrTableTbl,  afrTableMap,  "Target AFR Table",   1
       ;       constant, variable
       xBins       = afrRpmBins,  rpm
-      yBins       = afrLoadBins,  MAP
+      yBins       = afrLoadBins,  MAPValue
       zBins       = afrTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
@@ -710,27 +711,27 @@ fileVersion = { 20150211 }
 #if CELSIUS
    CLTGauge          = coolant,       "Coolant Temp",        "°C",      -40,    140,     -15,      1,      95,   110,   1,   1
 #else
-   CLTGauge          = coolant,       "Coolant Temp",        "°F",      -40,    285,     5,      35,      205,   230,   1,   1
+   CLTGauge          = coolant,       "Coolant Temp",        "°F",      -40,    285,       5,     35,     205,   230,   1,   1
 #endif
 #if CELSIUS
    IATGauge          = intake,     "Intake Air Temp",        "°C",      -40,    140,     -15,      1,      95,   110,   1,   1
 #else
-   IATGauge          = intake,     "Intake Air Temp",        "°F",      -40,    285,     5,      35,      205,   230,   1,   1
+   IATGauge          = intake,     "Intake Air Temp",        "°F",      -40,    285,       5,     35,     205,   230,  1,   1
 #endif
    throttleGauge     = TPS,      "Throttle Position",         "%",        0,    100,       0,      0,     100,   100,   0,   0
-   afr1Gauge         = AFRactual,       "Air:Fuel Ratio 1",          "",       10,   19.4,      12,     13,      15,    16,   2,   2
-   mafGauge          = MAF,          "Mass Air Flow",         "v",        0,      5,       0,      1,       3,     4,   1,   1
-   VBattGauge        = VBatt,      "Battery Voltage",         "V",        8,      21,      9,      10,     17,    19,   1,   1
-   tpsADCGauge       = tpsADC,             "tps ADC",       "ADC",        0,      1024,      0,      0,     0,     0,   0,   0	
-   atmPresCGauge     = atmPres,        "atmo pressu",       "kPa",        0,      1024,      0,      0,     0,     0,   0,   0	
-   mapCGauge         = MAP,                    "MAP",       "kPa",        0,      1024,      0,      0,     0,     0,   0,   0	
-   pulseWidthGauge   = pulseWidth,     "Pulse Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
-   baseFuelGauge     = baseFuel,       "Base Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
-   crankingFuelGauge = crankingFuel,   "crank Width",      "mSec",    0,  25.5,    1.0,   1.2,   20,   25, 3, 1
-   ignadvGauge = ign_adv,       "Ignition Advance 1",   "degrees", -100,   100,    -999,     -999,  999,  999, 1, 1
-;   warmupEnrichGauge = warmupEnrich,  "Warmup Enrichment",  "%",     100,   150,     -1,    -1,  101,  105, 0, 0
-;   accelEnrichGauge  = accDecEnrich,  "Accel Enrich",       "%",      50,   150,     -1,    -1,  999,  999, 0, 0
-   dwellGauge        = sparkDwell,         "Dwell",              "mSec",    0,    10,   0.5,    1.0,  6.0,  8.0, 1, 1
+   afr1Gauge         = AFRactual, "Air:Fuel Ratio 1",          "",       10,   19.4,      12,     13,      15,    16,   2,   2
+   mafGaugeVolts     = MAF,          "Mass Air Flow",         "v",        0,      5,       0,      1,       3,     4,   1,   1
+   VBattGauge        = VBatt,      "Battery Voltage",         "V",        8,     21,       9,     10,      17,    19,   1,   1
+   tpsADCGauge       = tpsADC,             "tps ADC",       "ADC",        0,   1024,       0,      0,       0,     0,   0,   0	
+   atmPresCGauge     = atmPres,        "atmo pressu",       "kPa",        0,   1024,       0,      0,       0,     0,   0,   0	
+   mapGaugeValue     = MAPValue,               "MAP",       "kPa",        0,    300,       0,    300,     300,     0,   0,   0	
+   pulseWidthGauge   = pulseWidth,     "Pulse Width",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
+   baseFuelGauge     = baseFuel,        "Base Width",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
+   crankingFuelGauge = crankingFuel,   "crank Width",      "mSec",        0,   25.5,     1.0,    1.2,      20,    25,   3, 1
+   ignadvGauge = ign_adv,       "Ignition Advance 1",   "degrees",     -100,    100,    -999,   -999,     999,   999,   1, 1
+;   warmupEnrichGauge = warmupEnrich, "Warmup Enrichment",    "%",      100,    150,      -1,     -1,     101,   105,   0, 0
+;   accelEnrichGauge  = accDecEnrich, "Accel Enrich",         "%",       50,    150,      -1,     -1,     999,   999,   0, 0
+   dwellGauge        = sparkDwell,           "Dwell",      "mSec",        0,     10,     0.5,    1.0,     6.0,   8.0,   1, 1
    egt1Gauge         = egt1, "EGT#1", "C", 0, 2000
    egt2Gauge         = egt2, "EGT#2", "C", 0, 2000
    egt3Gauge         = egt3, "EGT#3", "C", 0, 2000
@@ -752,7 +753,7 @@ fileVersion = { 20150211 }
    gauge1 = tachometer
    gauge2 = CLTGauge
    gauge3 = throttleGauge
-   gauge4 = mafGauge
+   gauge4 = mafGaugeVolts
    gauge5 = afr1Gauge
    gauge6 = tpsADCGauge
    gauge7 = dwellGauge
@@ -792,7 +793,7 @@ fileVersion = { 20150211 }
    entry = intake,          "IAT",         float,  "%.1f"
    entry = TPS,             "TPS",         float,  "%d"
    entry = MAF,             "MAF",         float,  "%.2f"
-   entry = MAP,             "MAP",         float,  "%d"
+   entry = MAPValue,        "MAP",         float,  "%d"
    entry = AFRactual,       "AFR",         float,  "%.2f"
    entry = VBatt,           "vBatt",       float,  "%.2f"
    entry = engineLoad,	    "Load", 	   float,   "%d"
