--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -572,7 +572,8 @@ fileVersion = { 20150216 }
       egt7            = scalar,  S16,    100, "°C",           1,         0
       egt8            = scalar,  S16,    102, "°C",           1,         0
       rpmAcceleration = scalar,  F32,    104, "dRpm",         1,         0
-      egoCorrection   = { 1 }     
+      massAirFlowValue= scalar,  F32,    108, "Kg/h",         1,         0
+      egoCorrection   = { 1 }
       time            = { timeNow }
 ;      engineLoad      = { algorithm == 0 ? MAF : TPS }
 
@@ -740,9 +741,10 @@ fileVersion = { 20150216 }
    egt6Gauge         = egt6, "EGT#6", "C", 0, 2000
    egt7Gauge         = egt7, "EGT#7", "C", 0, 2000
    egt8Gauge         = egt8, "EGT#8", "C", 0, 2000
-   vssGauge          = vehicleSpeedKph,  "Speed",         "kmh",        0,      200,       0,      1,       3,     4,   1,   1
-   rpmAccelerationGa = rpmAcceleration, "rpm d", "dRpm",        0,      3,       0,      1,       3,     4,   1,   1
-
+   vssGauge          = vehicleSpeedKph,     "Speed",         "kmh",        0,    200,       0,      1,       3,     4,   1,   1
+   rpmAccelerationGa = rpmAcceleration,     "rpm d",        "dRpm",        0,      3,       0,      1,       3,     4,   1,   1
+   massAirFlowValueGa = massAirFlowValue,"Air Flow",       "kg/hr",        0,     50,    -999,   -999,     999,   999,   1,   1
+   
 [FrontPage]
    ; Gauges are numbered left to right, top to bottom.
    ;
@@ -802,6 +804,7 @@ fileVersion = { 20150216 }
    entry = ign_adv,	    	"ignAdv",	   float,  "%.2f"
    entry = vehicleSpeedKph,	"speed",	   float,  "%.2f"
    entry = rpmAcceleration, "dRPM",        float,  "%.3f"
+   entry = massAirFlowValue, "Mass",        float,  "%.3f"
    
    
 ;     tpsADC          = U16,    "ADC",
