--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -573,6 +573,7 @@ fileVersion = { 20150216 }
       egt8            = scalar,  S16,    102, "°C",           1,         0
       rpmAcceleration = scalar,  F32,    104, "dRpm",         1,         0
       massAirFlowValue= scalar,  F32,    108, "Kg/h",         1,         0
+      veValue         = scalar,  F32,    112, "ratio",        1,         0
       egoCorrection   = { 1 }
       time            = { timeNow }
 ;      engineLoad      = { algorithm == 0 ? MAF : TPS }
@@ -744,6 +745,7 @@ fileVersion = { 20150216 }
    vssGauge          = vehicleSpeedKph,     "Speed",         "kmh",        0,    200,       0,      1,       3,     4,   1,   1
    rpmAccelerationGa = rpmAcceleration,     "rpm d",        "dRpm",        0,      3,       0,      1,       3,     4,   1,   1
    massAirFlowValueGa = massAirFlowValue,"Air Flow",       "kg/hr",        0,     50,    -999,   -999,     999,   999,   1,   1
+   veValueGauge      = veValue,             "ratio",            "",        5,     25,       9,      9,      20,    20,   1,   1
    
 [FrontPage]
    ; Gauges are numbered left to right, top to bottom.
@@ -804,7 +806,8 @@ fileVersion = { 20150216 }
    entry = ign_adv,	    	"ignAdv",	   float,  "%.2f"
    entry = vehicleSpeedKph,	"speed",	   float,  "%.2f"
    entry = rpmAcceleration, "dRPM",        float,  "%.3f"
-   entry = massAirFlowValue, "Mass",        float,  "%.3f"
+   entry = massAirFlowValue,"Mass",        float,  "%.3f"
+   entry = veValue,         "ratio",       float,  "%.3f"
    
    
 ;     tpsADC          = U16,    "ADC",
