--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -469,7 +469,7 @@ page = 1
 	ignitionTable				 = array, F32, 9400, [16x16],"deg", 1, 0, -360, 360, 2
 	ignitionLoadBins				= array, F32,	10424,	[16],	"Load", 1, 0.0, 0, 300.0, 2
 	ignitionRpmBins					= array, F32,	10488,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
-	veTable						 = array, F32, 10552, [16x16],"deg", 1, 0, 0, 100.0, 2
+	veTable						 = array, F32, 10552, [16x16],"%", 100, 0, 0, 100.0, 2
 	veLoadBins						= array, F32,	11576,	[16],	"%", 1, 0.0, 0, 300.0, 2
 	veRpmBins						= array, F32,	11640,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 	afrTable					 = array, F32, 11704, [16x16],"deg", 1, 0, 0, 25.0, 2
@@ -745,7 +745,7 @@ fileVersion = { 20150216 }
    vssGauge          = vehicleSpeedKph,     "Speed",         "kmh",        0,    200,       0,      1,       3,     4,   1,   1
    rpmAccelerationGa = rpmAcceleration,     "rpm d",        "dRpm",        0,      3,       0,      1,       3,     4,   1,   1
    massAirFlowValueGa = massAirFlowValue,"Air Flow",       "kg/hr",        0,     50,    -999,   -999,     999,   999,   1,   1
-   veValueGauge      = veValue,             "ratio",            "",        5,     25,       9,      9,      20,    20,   1,   1
+   veValueGauge      = veValue,                 "%",            "",        0,    120,      10,     10,     100,   100,   1,   1
    
 [FrontPage]
    ; Gauges are numbered left to right, top to bottom.
