--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -39,7 +39,7 @@ struct engine_configuration_s
 
 ! please note that 1024 here is 4 * FUEL_RPM_COUNT * FUEL_LOAD_COUNT  
 custom fuel_table_t	1024 array,   F32,   @OFFSET@, [16x16],"ms",      1,     0,      0.0,   300.0,   2
-custom ve_table_t 1024 array,   F32,   @OFFSET@, [16x16],"deg",     1,     0,        0,  100.0,    2 
+custom ve_table_t 1024 array,   F32,   @OFFSET@, [16x16],"%", 100, 0, 0, 100.0, 2 
 custom afr_table_t 1024 array,   F32,   @OFFSET@, [16x16],"deg",	   1,     0,        0,  25.0,     2 
 
 ! please note that 1024 here is 4 * IGN_LOAD_COUNT * IGN_RPM_COUNT  
