current VE to VE analyzis

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -497,6 +497,7 @@ page = 1
    gauge1       = tachometer	
    gauge2       = afr1Gauge
    gauge3		= mapGaugeValue
+   gauge4		= veValueGauge
 
 
 [VeAnalyze]
