--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -505,6 +505,17 @@ page = 1
        veAnalyzeMap = veTableTbl, afrTableTbl, AFRactual, egoCorrection , { 1 }
  ;lambdaTargetTables = afrTable1Tbl, afrTable2Tbl, afrTSCustom
 
+       ; filter =  Name,        "DisplayName", outputChannel, operator, defaultVal, userAdjustable
+        filter = minRPMFilter, "Minimum RPM", rpm,           <       , 500,      , true
+
+#if CELSIUS          
+         filter = minCltFilter, "Minimum CLT", coolant,       <       , 71,       , true
+#else
+         filter = minCltFilter, "Minimum CLT", coolant,       <       , 160,      , true
+#endif
+
+
+
 [OutputChannels]
 
 ; see TS_FILE_VERSION in firmware code
