--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -590,6 +590,8 @@ fileVersion = { 20150216 }
       rpmAcceleration = scalar,  F32,    104, "dRpm",         1,         0
       massAirFlowValue= scalar,  F32,    108, "Kg/h",         1,         0
       veValue         = scalar,  F32,    112, "ratio",        1,         0
+      maxDelta        = scalar,  F32,    116, "ratio",        1,         0
+      minDelta        = scalar,  F32,    120, "ratio",        1,         0
       egoCorrection   = { 1 }
       time            = { timeNow }
 ;      engineLoad      = { algorithm == 0 ? MAF : TPS }
@@ -762,6 +764,8 @@ fileVersion = { 20150216 }
    rpmAccelerationGa = rpmAcceleration,     "rpm d",        "dRpm",        0,      3,       0,      1,       3,     4,   1,   1
    massAirFlowValueGa = massAirFlowValue,"Air Flow",       "kg/hr",        0,     50,    -999,   -999,     999,   999,   1,   1
    veValueGauge      = veValue,                 "%",            "",        0,    120,      10,     10,     100,   100,   1,   1
+   maxDeltaGauge     = maxDelta,                "%",            "",        0,    120,      10,     10,     100,   100,   1,   1
+   minDeltaGauge     = minDelta,                "%",            "",        0,    120,      10,     10,     100,   100,   1,   1
    
 [FrontPage]
    ; Gauges are numbered left to right, top to bottom.
@@ -824,6 +828,8 @@ fileVersion = { 20150216 }
    entry = rpmAcceleration, "dRPM",        float,  "%.3f"
    entry = massAirFlowValue,"Mass",        float,  "%.3f"
    entry = veValue,         "ratio",       float,  "%.3f"
+   entry = maxDelta,        "maxDelta",    float,  "%.3f"
+   entry = minDelta,        "minDelta",    float,  "%.3f"
    
    
 ;     tpsADC          = U16,    "ADC",
