--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -469,7 +469,9 @@ bit hasMapSensor;@see isMapAveragingEnabled
 custom pin_input_mode_e 4 scalar, F32,	@OFFSET@,	"ms", 1, 0, 0, 200, 1	
 	pin_input_mode_e[LE_COMMAND_COUNT iterate] fsioInputModes;
 	
-	int[145] unused3;
+	int[144] unused3;
+	
+	int accelLength;;"len",        1,     0,    0, 200,     3
 	
 	float deaccelEnrichmentThreshold;;"roc",        1,     0,    0, 200,     3
 	float deaccelEnrichmentMultiplier;;"coeff",        1,     0,    0, 200,     3
