https://sourceforge.net/p/rusefi/tickets/150/

--- a/java_console/build.xml
+++ b/java_console/build.xml
@@ -75,6 +75,11 @@
 
     </target>
 
+    <target name="realtest" depends="jar">
+	<java classpath="${jar_file}" classname="com.rusefi.RealHwTest" failonerror="true"> 
+	</java>  
+
+    </target>
 
 
 </project>
