--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -155,7 +155,7 @@ float displacement;Engine displacement, in liters\nsee also cylindersCount;"L", 
 custom cylinders_count_t 4 bits,    U32,    @OFFSET@, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
 cylinders_count_t cylindersCount;
 
-custom firing_order_e 4 bits,    U32,    @OFFSET@, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
+custom firing_order_e 4 bits,    U32,    @OFFSET@, [0:3], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "1-5-3-6-2-4", "1-4-2-5-3-6", "1-2", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
 firing_order_e firingOrder;
 end_struct
 
