--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -12,14 +12,14 @@ enable2ndByteCanID = false
    messageEnvelopeFormat = msEnvelope_1.0
 
    endianness          = little
-   nPages              = 2
+   nPages              = 1
 
-   pageIdentifier      = "\x00\x00", "\x01\x00"
-   pageReadCommand     = "R\x00\x00%2o%2c", "R\x01\x00%2o%2c"
-   burnCommand         = "B\x00\x00", "B\x01\x00"
-   pageActivate        = "P\x00\x00", "P\x01\x00"
-   pageValueWrite      = "W\x00\x00%2o%v", "W\x01\x00%2o%v"
-   pageChunkWrite      = "C\x00\x00%2o%2c%v", "C\x01\x00%2o%2c%v"
+   pageIdentifier      = "\x00\x00"
+   pageReadCommand     = "R\x00\x00%2o%2c"
+   burnCommand         = "B\x00\x00"
+   pageActivate        = "P\x00\x00"
+   pageValueWrite      = "W\x00\x00%2o%v"
+   pageChunkWrite      = "C\x00\x00%2o%2c%v"
 
 ;communication settings
 ;e.g. put writeblocks off and add an interwrite delay
@@ -485,12 +485,6 @@ page = 1
 	injPhaseRpmBins					= array, F32,	13944,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 ; total TS size = 14008
 ; CONFIG_DEFINITION_END
-
-page = 2
-	ve2Table					 = array, F32, 0, [16x16],"%", 100, 0, 0, 100.0, 2
-	ve2LoadBins						= array, F32,	1024,	[16],	"%", 1, 0.0, 0, 300.0, 2
-	ve2RpmBins						= array, F32,	1088,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
-
 	
 
 [Tuning]
@@ -701,14 +695,6 @@ fileVersion = { 20150216 }
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
       upDownLabel = "(RICHER)", "(LEANER)"
 
-   table = ve2TableTbl,  ve2TableMap,  "VE2 Table",   1
-      ;       constant, variable
-      xBins       = ve2RpmBins,  rpm
-      yBins       = ve2LoadBins,  engineLoad
-      zBins       = ve2Table
-;      gridHeight  = 2.0
-      gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
-      upDownLabel = "(RICHER)", "(LEANER)"
 
    table = injPhaseTableTbl,  injPhaseTableMap,  "Injection Phase Table",   1
       ;       constant, variable
@@ -870,7 +856,6 @@ fileVersion = { 20150216 }
 		subMenu = iatFuelCorrCurve,			"Intake air temp fuel correction"
 		subMenu = cltFuelCorrCurve,			"Coolant temp fuel correction"
         subMenu = veTableTbl,           	"VE Table", {algorithm == 3}           
-        subMenu = ve2TableTbl,           	"VE2 Table"         
         subMenu = afrTableTbl,          	"Targe AFR Table", {algorithm == 3}
         subMenu = injPhaseTableTbl,         "Injection Phase"           
 		subMenu = std_separator
@@ -885,7 +870,6 @@ fileVersion = { 20150216 }
       subMenu = ignitionTableMap,       	"Ignition Map"           
       subMenu = fuelTableMap,           	"Fuel Table"           
       subMenu = veTableMap,             	"VE Table"           
-      subMenu = ve2TableMap,             	"VE2 Table"           
       subMenu = afrTableMap,            	"Targe AFR Table"
       subMenu = injPhaseTableMap,           "Injection Phase"
 
