--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -115,7 +115,7 @@ float[IAT_CURVE_SIZE] iatFuelCorr;;"%",      100,     0,      0.0,    500.0,   2
 
 int16_t directSelfStimulation;Should the trigger emulator push data right into trigger input, eliminating the need for physical jumper wires?\nPS: Funny name, right? :)\ntodo: make this a bit on some bit field
 
-int16_t tpsMin;todo: extract these two fields into a structure\ntodo: we need two sets of TPS parameters - modern ETBs have to sensors;"ADC",      1,     0,    0, 1023,      0
+int16_t tpsMin;todo: extract these two fields into a structure\ntodo: we need two sets of TPS parameters - modern ETBs have two sensors;"ADC",      1,     0,    0, 1023,      0
 int16_t tpsMax;tpsMax value as 10 bit ADC value. Not Voltage!;"ADC",      1,     0,    0, 1023,      0
 
 uint16_t unused334;
