--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -332,6 +332,7 @@ bit is_enabled_spi_2
 	bit isFastAdcEnabled
 	bit isEngineControlEnabled
 	bit isHip9011Enabled
+	bit isVerboseAlternator
 
 	brain_input_pin_e[LOGIC_ANALYZER_CHANNEL_COUNT iterate] logicAnalyzerPins;
 	uint8_t[LOGIC_ANALYZER_CHANNEL_COUNT] logicAnalyzerMode;default or inverted input
