--- a/firmware/.cproject
+++ b/firmware/.cproject
@@ -59,7 +59,7 @@
 									<listOptionValue builtIn="false" value="&quot;../hw_layer/algo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -120,7 +120,7 @@
 									<listOptionValue builtIn="false" value="&quot;../hw_layer/algo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -351,7 +351,7 @@
 									<listOptionValue builtIn="false" value="&quot;../hw_layer/algo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -407,7 +407,7 @@
 									<listOptionValue builtIn="false" value="&quot;../chibios/os/various&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -532,7 +532,7 @@
 									<listOptionValue builtIn="false" value="&quot;../chibios/os/various&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -588,7 +588,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="chibios/boards/ST_STM32F0_DISCOVERY|chibios/os/hal/platforms/STM32/OTGv1|chibios/os/hal/platforms/STM32/RTCv2|chibios/os/hal/platforms/STM32/I2Cv2|chibios/os/ports/GCC/ARMCMx/chcore_v6m.c|chibios/os/ports/GCC/ARMCMx/STM32F0xx|console/status_loop.cpp|controllers/settings.cpp|controllers/flash_main.cpp|development|hw_layer/joystick.cpp|hw_layer/servo.cpp|hw_layer/pin_repository.c|hw_layer/microsecond_timer.c|hw_layer/io_pins.cpp|hw_layer/flash.c|hw_layer/adc_inputs.cpp|hw_layer/gpio_helper.cpp|hw_layer/board_test.cpp|chibios/os/hal/platforms/STM32/USARTv2|chibios/os/hal/platforms/STM32/SPIv2|chibios/os/hal/platforms/STM32/GPIOv2|chibios/os/hal/platforms/STM32F0xx|chibios/os/various/fatfs_bindings|util/LocalVersionHolder.cpp|util/histogram.c|util/data_buffer.c|util/cyclic_buffer.cpp|controllers/algo|controllers/system/SingleTimerExecutor.cpp|controllers/system/signal_executor_sleep.c|controllers/system/pwm_generator_logic.cpp|controllers/system/event_queue.cpp|chibios/ext/fatfs|config/engines|hw_layer/rtc_helper.c|hw_layer/mmc_card.c|hw_layer/neo6m.c|hw_layer/lcd|controllers/core|controllers/math|controllers/sensors|controllers/trigger|controllers/sensors/tps.cpp|controllers/sensors/thermistors.cpp|controllers/sensors/map.cpp|controllers/sensors/maf.cpp|controllers/sensors/ego.cpp|hw_layer/wave_analyzer_hw.c|hw_layer/vehicle_speed.cpp|hw_layer/trigger_input.cpp|hw_layer/stepper.cpp|hw_layer/pwm_generator.cpp|hw_layer/HIP9011.cpp|controllers/map_multiplier_thread.cpp|controllers/map_averaging.cpp|controllers/malfunction_indicator.cpp|controllers/lcd_controller.cpp|controllers/injector_central.cpp|console/tunerstudio|controllers/idle_thread.cpp|controllers/electronic_throttle.cpp|controllers/alternatorController.cpp|controllers/engine_controller.cpp|rusefi.cpp|chibios/boards/ST_STM32F4_DISCOVERY|hw_layer/stm32f4|chibios/os/ports/GCC/ARMCMx/STM32F4xx|chibios/os/hal/platforms/STM32F4xx|config/stm32f4ems|chibios/boards/simulator|chibios/boards/OLIMEX_STM32_E407|chibios/os/ports/IAR|chibios/os/hal/platforms/Win32|chibios/os/ports/GCC/SIMIA32|chibios/os/ports/IAR/ARMCMx/chcore_v6m.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="chibios/boards/ST_STM32F0_DISCOVERY|chibios/os/hal/platforms/STM32/OTGv1|chibios/os/hal/platforms/STM32/RTCv2|chibios/os/hal/platforms/STM32/I2Cv2|chibios/os/ports/GCC/ARMCMx/chcore_v6m.c|chibios/os/ports/GCC/ARMCMx/STM32F0xx|console/status_loop.cpp|controllers/settings.cpp|controllers/flash_main.cpp|development|hw_layer/joystick.cpp|hw_layer/servo.cpp|hw_layer/pin_repository.c|hw_layer/microsecond_timer.c|hw_layer/io_pins.cpp|hw_layer/flash.c|hw_layer/adc_inputs.cpp|hw_layer/gpio_helper.cpp|hw_layer/board_test.cpp|chibios/os/hal/platforms/STM32/USARTv2|chibios/os/hal/platforms/STM32/SPIv2|chibios/os/hal/platforms/STM32/GPIOv2|chibios/os/hal/platforms/STM32F0xx|chibios/os/various/fatfs_bindings|util/LocalVersionHolder.cpp|util/histogram.c|util/data_buffer.c|util/cyclic_buffer.cpp|controllers/algo|controllers/system/SingleTimerExecutor.cpp|controllers/system/signal_executor_sleep.c|controllers/system/pwm_generator_logic.cpp|controllers/system/event_queue.cpp|chibios/ext/fatfs|config/engines|hw_layer/rtc_helper.c|hw_layer/mmc_card.c|hw_layer/neo6m.c|hw_layer/lcd|controllers/core|controllers/math|controllers/sensors|controllers/trigger|controllers/sensors/tps.cpp|controllers/sensors/thermistors.cpp|controllers/sensors/map.cpp|controllers/sensors/maf.cpp|controllers/sensors/ego.cpp|hw_layer/wave_analyzer_hw.c|hw_layer/vehicle_speed.cpp|hw_layer/trigger_input.cpp|hw_layer/stepper.cpp|hw_layer/pwm_generator.cpp|hw_layer/HIP9011.cpp|controllers/map_multiplier_thread.cpp|controllers/map_averaging.cpp|controllers/malfunction_indicator.cpp|controllers/lcd_controller.cpp|controllers/injector_central.cpp|console/binary|controllers/idle_thread.cpp|controllers/electronic_throttle.cpp|controllers/alternatorController.cpp|controllers/engine_controller.cpp|rusefi.cpp|chibios/boards/ST_STM32F4_DISCOVERY|hw_layer/stm32f4|chibios/os/ports/GCC/ARMCMx/STM32F4xx|chibios/os/hal/platforms/STM32F4xx|config/stm32f4ems|chibios/boards/simulator|chibios/boards/OLIMEX_STM32_E407|chibios/os/ports/IAR|chibios/os/hal/platforms/Win32|chibios/os/ports/GCC/SIMIA32|chibios/os/ports/IAR/ARMCMx/chcore_v6m.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -652,7 +652,7 @@
 									<listOptionValue builtIn="false" value="&quot;../hw_layer/algo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
@@ -713,7 +713,7 @@
 									<listOptionValue builtIn="false" value="&quot;../hw_layer/algo&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../util&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../console&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;../console/tunerstudio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;../console/binary&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/engines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;../config/boards&quot;"/>
