https://sourceforge.net/p/rusefi/tickets/164/

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -51,9 +51,9 @@ page = 1
 	injector_battLagCorrBins		= array, F32,	16,	[8],	"V", 1, 0, 0.0, 20.0, 2
 	injector_battLagCorr			= array, F32,	48,	[8],	"ms/V", 1, 0, 0.0, 50.0, 2
 	cltFuelCorrBins					= array, F32,	80,	[16],	"C", 1, 0, -100.0, 250.0, 2
-	cltFuelCorr						= array, F32,	144,	[16],	"%", 100, 0, 0.0, 500.0, 2
+	cltFuelCorr						= array, F32,	144,	[16],	"coeff", 1, 0, 0.0, 5.0, 2
 	iatFuelCorrBins					= array, F32,	208,	[16],	"C", 1, 0, -100.0, 250.0, 2
-	iatFuelCorr						= array, F32,	272,	[16],	"%", 100, 0, 0.0, 500.0, 2
+	iatFuelCorr						= array, F32,	272,	[16],	"coeff", 1, 0, 0.0, 5.0, 2
 ;skipping directSelfStimulation offset 336
 	tpsMin							= scalar, S16,	338,	"ADC", 1, 0, 0, 1023, 0
 	tpsMax							= scalar, S16,	340,	"ADC", 1, 0, 0, 1023, 0
@@ -413,9 +413,9 @@ page = 1
 	isManualSpinningMode	= bits,    U32,   	4888, [12:12], "false", "true"
 	twoWireBatch			= bits,    U32,   	4888, [13:13], "false", "true"
 	digitalChartSize				= scalar, U32,	4892,	"count", 1, 0, 0, 300, 0
-	crankingFuelCoef				= array, F32,	4896,	[8],	"%", 100, 0, 0.0, 700.0, 2
+	crankingFuelCoef				= array, F32,	4896,	[8],	"coeff", 1, 0, 0.0, 7.0, 2
 	crankingFuelBins				= array, F32,	4928,	[8],	"C", 1, 0, -80.0, 170.0, 2
-	crankingCycleCoef				= array, F32,	4960,	[8],	"%", 100, 0, 0.0, 500.0, 2
+	crankingCycleCoef				= array, F32,	4960,	[8],	"coeff", 1, 0, 0.0, 5.0, 2
 	crankingCycleBins				= array, F32,	4992,	[8],	"C", 1, 0, -80.0, 170.0, 2
 	ignitionDwellForCrankingMs		= scalar, F32,	5024,	"ms", 1, 0, 0, 200, 1
 ;skipping targetIdleRpm offset 5028
@@ -468,7 +468,7 @@ page = 1
 ;skipping unused3 offset 5208
 	accelLength						= scalar, S32,	5780,	"len", 1, 0, 0, 200, 3
 	deaccelEnrichmentThreshold		= scalar, F32,	5784,	"roc", 1, 0, 0, 200, 3
-	deaccelEnrichmentMultiplier		= scalar, F32,	5788,	"coeff", 1, 0, 0, 200, 3
+	deaccelEnrichmentMultiplier		= scalar, F32,	5788,	"coeff", 1, 0, 0, 2, 3
 	accelEnrichmentThreshold		= scalar, F32,	5792,	"roc", 1, 0, 0, 200, 3
 	accelEnrichmentMultiplier		= scalar, F32,	5796,	"coeff", 1, 0, 0, 200, 3
 	timingMultiplier			 = array, U08, 5800, [200],"char", 1, 0, 0.0, 3.0, 2
@@ -481,11 +481,11 @@ page = 1
 	ignitionTable				 = array, F32, 9400, [16x16],"deg", 1, 0, -360, 360, 2
 	ignitionLoadBins				= array, F32,	10424,	[16],	"Load", 1, 0.0, 0, 300.0, 2
 	ignitionRpmBins					= array, F32,	10488,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
-	veTable						 = array, F32, 10552, [16x16],"%", 1, 0, 0, 200.0, 2
-	veLoadBins						= array, F32,	11576,	[16],	"%", 1, 0.0, 0, 300.0, 2
+	veTable						 = array, F32, 10552, [16x16],"coeff", 1, 0, 0, 200.0, 2
+	veLoadBins						= array, F32,	11576,	[16],	"map", 1, 0.0, 0, 300.0, 2
 	veRpmBins						= array, F32,	11640,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 	afrTable					 = array, F32, 11704, [16x16],"deg", 1, 0, 0, 25.0, 2
-	afrLoadBins						= array, F32,	12728,	[16],	"%", 1, 0.0, 0, 300.0, 2
+	afrLoadBins						= array, F32,	12728,	[16],	"map", 1, 0.0, 0, 300.0, 2
 	afrRpmBins						= array, F32,	12792,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 	injectionPhase				 = array, F32, 12856, [16x16],"ms", 1, 0, 0.0, 300.0, 2
 	injPhaseLoadBins				= array, F32,	13880,	[16],	"Load", 1, 0.0, 0, 300.0, 2
@@ -654,7 +654,7 @@ fileVersion = { 20150314 }
    curve = iatFuelCorrCurve, "Intake air temp fuel correction"
       columnLabel = "Coolant", "Correction"
       xAxis       =  -40, 120, 10
-      yAxis       =  -300,  300, 10
+      yAxis       =  0,  5, 10
       xBins       = iatFuelCorrBins, intake
       yBins       = iatFuelCorr
       gauge       = IATGauge
@@ -662,7 +662,7 @@ fileVersion = { 20150314 }
 	curve = cltFuelCorrCurve, "Coolant temp fuel correction"
       columnLabel = "Coolant", "Correction"
       xAxis       =  -40, 120, 10
-      yAxis       =  3,  300, 10
+      yAxis       =  0,  5, 10
       xBins       = cltFuelCorrBins, coolant
       yBins       = cltFuelCorr
       gauge       = CLTGauge
